# FudanDNN

./: .gitignore  CodeStyleGuidance.txt  Constant.h  FudanDNN.pro  FudanDNN.sln  README.md  arrow.cpp  arrow.h  diagramitem.cpp  diagramitem.h  diagramscene.cpp  diagramscene.h  hyperparametercontrol.cpp  hyperparametercontrol.h  hyperparameterwidget.cpp  hyperparameterwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  networkeditor.qrc  networkunitbase.cpp  networkunitbase.h  networkunitpool.cpp  networkunitpool.h  networkunitutil.h  workingthread.cpp  workingthread.h
src/: AbstractComponent.cpp  AbstractComponent.h  AbstractLayer.cpp  AbstractLayer.h  AbstractMatrix.h  AbstractNetworkLayer.cpp  AbstractNetworkLayer.h  AutoEncoder.cpp  AutoEncoder.h  CMakeLists.txt  CNN1DComponent.cpp  CNN1DComponent.h  CNN2DComponent.cpp  CNN2DComponent.h  CharacterInput.cpp  CharacterInput.h  CharacterSample.cpp  CharacterSample.h  ComponentNode.h  ContractiveAutoEncoder.h  ConvolutionalNetworkLayer.cpp  ConvolutionalNetworkLayer.h  Criteria.cpp  Criteria.h  DenoiseAutoEncoder.cpp  DenoiseAutoEncoder.h  HardShrink.cpp  HardShrink.h  HardTanH.cpp  HardTanH.h  Input.h  LinearLayer.cpp  LinearLayer.h  LocalTest.cpp  LogSigmoid.cpp  LogSigmoid.h  MSE.cpp  MSE.h  MasterControl.cpp  MasterControl.h  (+35 more)
src/criteria/: Criteria.cpp  Mse.cpp  Softmax.cpp
src/dataset/: regression.xml
src/functions/: FunctionFactory.cpp  HardTanH.cpp  ReLU.cpp  ReLULayer.cpp  Sigmoid.cpp  TanH.cpp
src/layer/: AdagradSolver.cpp  Concat.cpp  ConcatLayer.cpp  ConvolutionLayer.cpp  HardTanHLayer.cpp  Layer.cpp  (+11 more)
(+263 files in other folders)
